Moved some utility functions to utility library

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <artifactId>utility</artifactId>
+            <groupId>com.github.shmvanhouten.adventofcode</groupId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
             <version>1.6.0</version>
