trying out assertJ

--- a/kt2021/pom.xml
+++ b/kt2021/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>kt2021</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.natpryce</groupId>
+            <artifactId>hamkrest</artifactId>
+            <version>1.8.0.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
