fix maven setup

--- a/kt2021/pom.xml
+++ b/kt2021/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>adventofcodekt</artifactId>
-        <groupId>com.github.shmvanhouten</groupId>
+        <groupId>com.github.shmvanhouten.adventofcode</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,6 +12,15 @@
     <artifactId>kt2021</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.shmvanhouten.adventofcode</groupId>
+            <artifactId>utility</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.natpryce</groupId>
             <artifactId>hamkrest</artifactId>
