--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>kt2021</module>
     </modules>
 
-    <groupId>com.github.shmvanhouten</groupId>
+    <groupId>com.github.shmvanhouten.adventofcode</groupId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -34,20 +34,10 @@
 
     <dependencies>
         <dependency>
-            <artifactId>utility</artifactId>
-            <groupId>com.github.shmvanhouten.adventofcode</groupId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -69,5 +59,20 @@
         </dependency>
 
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <artifactId>utility</artifactId>
+                <groupId>com.github.shmvanhouten.adventofcode</groupId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
