day 23 part 1 and 2

--- a/kt2022/pom.xml
+++ b/kt2022/pom.xml
@@ -27,6 +27,14 @@
             <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.strikt</groupId>
+            <artifactId>strikt-core</artifactId>
+            <version>0.34.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
