day 08 try to use grid (array of arrays) instead of Set/Map of coordinates, it is a lot faster (100 ms vs 2 seconds). I built the grid for a project euler problem (nr 11). I think it would be good to use it elsewhere but need to flesh out how I can build in more generic functions so that it is usable as such.  The maxOf might not be too generically applicable, but I will have to see in other cases.

--- a/utility/pom.xml
+++ b/utility/pom.xml
@@ -24,6 +24,13 @@
             <version>1.8.0.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.strikt</groupId>
+            <artifactId>strikt-core</artifactId>
+            <version>0.34.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
