--- a/kt2022/pom.xml
+++ b/kt2022/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
 
         <dependency>
+            <artifactId>project-euler</artifactId>
+            <groupId>com.github.shmvanhouten</groupId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.23.1</version>
