--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,10 @@
     <artifactId>adventofcodekt</artifactId>
 
     <modules>
-        <module>kt2022</module>
-        <module>kt2021</module>
+<!--        <module>kt2022</module>-->
+<!--        <module>kt2021</module>-->
         <module>utility</module>
+        <module>kt2023</module>
     </modules>
 
     <groupId>com.github.shmvanhouten.adventofcode</groupId>
@@ -22,7 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.8.0</kotlin.version>
+        <kotlin.version>1.9.21</kotlin.version>
         <junit-jupiter.version>5.9.0</junit-jupiter.version>
     </properties>
 
@@ -34,12 +35,6 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit5</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
