--- a/kt2023/pom.xml
+++ b/kt2023/pom.xml
@@ -20,6 +20,10 @@
             <groupId>com.github.shmvanhouten.adventofcode</groupId>
             <artifactId>utility</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+        </dependency>
 
 
         <dependency>
