--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
         <kotlin.version>1.9.21</kotlin.version>
+        <kotlin.coroutines.version>1.6.4</kotlin.coroutines.version>
         <junit-jupiter.version>5.9.0</junit-jupiter.version>
     </properties>
 
@@ -69,6 +70,11 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlinx</groupId>
+                <artifactId>kotlinx-coroutines-core</artifactId>
+                <version>${kotlin.coroutines.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
