--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 <!--        <module>kt2021</module>-->
         <module>utility</module>
         <module>kt2023</module>
+        <module>kt2024</module>
     </modules>
 
     <groupId>com.github.shmvanhouten.adventofcode</groupId>
@@ -24,10 +25,10 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
-        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.9.21</kotlin.version>
-        <kotlin.coroutines.version>1.6.4</kotlin.coroutines.version>
-        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
+        <kotlin.version>2.1.0</kotlin.version>
+        <kotlin.coroutines.version>1.9.0</kotlin.coroutines.version>
+        <junit-jupiter.version>5.11.3</junit-jupiter.version>
     </properties>
 
     <repositories>
