Just doing a few of the puzzles of 2020 (again)

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>utility</module>
         <module>kt2023</module>
         <module>kt2024</module>
+        <module>kt2020</module>
     </modules>
 
     <groupId>com.github.shmvanhouten.adventofcode</groupId>
