add example to 2024 day 1

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>kt2023</module>
         <module>kt2024</module>
         <module>kt2020</module>
+        <module>kt2015</module>
     </modules>
 
     <groupId>com.github.shmvanhouten.adventofcode</groupId>
